LenovoBat 14-Oct-25  1:26:47.95